[gd_scene load_steps=8 format=1]

[ext_resource path="res://scripts/game/mini_item.gd" type="Script" id=1]
[ext_resource path="res://assets/game/canal/2/electric.png" type="Texture" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]
[ext_resource path="res://fonts/segoeuisbi24.fnt" type="BitmapFont" id=4]
[ext_resource path="res://fonts/segoeuisli24.fnt" type="BitmapFont" id=5]
[ext_resource path="res://fonts/segoeuisb24.fnt" type="BitmapFont" id=6]
[ext_resource path="res://fonts/segoeuisl24.fnt" type="BitmapFont" id=7]

[node name="mini_item" type="WindowDialog"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 666.0
margin/top = 111.0
margin/right = 1638.0
margin/bottom = 722.0
popup/exclusive = false
window/title = ""
script/script = ExtResource( 1 )

[node name="picture" type="Sprite" parent="."]

transform/pos = Vector2( 495.415, 274.603 )
transform/scale = Vector2( 1.87826, 1.26968 )
texture = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 538.0
margin/right = 973.0
margin/bottom = 608.0
alignment = 0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]

rect/min_size = Vector2( 0, 70 )
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 973.0
margin/bottom = 70.0
alignment = 0

[node name="itemIcon" type="TextureFrame" parent="VBoxContainer/HBoxContainer"]

rect/min_size = Vector2( 64, 64 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 3
margin/left = 0.0
margin/top = 0.0
margin/right = 64.0
margin/bottom = 70.0
texture = ExtResource( 3 )
stretch_mode = 6

[node name="descriptionContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]

rect/min_size = Vector2( 200, 0 )
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 68.0
margin/top = 0.0
margin/right = 957.0
margin/bottom = 70.0
alignment = 0

[node name="itemName" type="RichTextLabel" parent="VBoxContainer/HBoxContainer/descriptionContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 0.0
margin/right = 889.0
margin/bottom = 33.0
custom_fonts/bold_italics_font = ExtResource( 4 )
custom_fonts/italics_font = ExtResource( 5 )
custom_fonts/bold_font = ExtResource( 6 )
custom_fonts/normal_font = ExtResource( 7 )
bbcode/enabled = false
bbcode/bbcode = ""
visible_characters = -1
percent_visible = 1.0

[node name="itemDescription" type="RichTextLabel" parent="VBoxContainer/HBoxContainer/descriptionContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 37.0
margin/right = 889.0
margin/bottom = 70.0
custom_fonts/bold_italics_font = ExtResource( 4 )
custom_fonts/italics_font = ExtResource( 5 )
custom_fonts/bold_font = ExtResource( 6 )
custom_fonts/normal_font = ExtResource( 7 )
bbcode/enabled = false
bbcode/bbcode = ""
visible_characters = -1
percent_visible = 1.0

[node name="buttonsContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 3
margin/left = 961.0
margin/top = 0.0
margin/right = 973.0
margin/bottom = 70.0
alignment = 0

[node name="useButton" type="Button" parent="VBoxContainer/HBoxContainer/buttonsContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 1
margin/left = 0.0
margin/top = 1.0
margin/right = 12.0
margin/bottom = 32.0
custom_fonts/font = ExtResource( 7 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="returnButton" type="Button" parent="VBoxContainer/HBoxContainer/buttonsContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 1
margin/left = 0.0
margin/top = 38.0
margin/right = 12.0
margin/bottom = 69.0
custom_fonts/font = ExtResource( 7 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[connection signal="pressed" from="VBoxContainer/HBoxContainer/buttonsContainer/useButton" to="." method="_on_useButton_pressed"]

[connection signal="pressed" from="VBoxContainer/HBoxContainer/buttonsContainer/returnButton" to="." method="_on_returnButton_pressed"]


